GCサンプルのコミット